@startuml US_3.2.5_Domain_Model

!define AGGREGATE_ROOT_COLOR #FFDDAA
!define VALUE_OBJECT_COLOR #E8F5E9

class User <<Aggregate Root>> AGGREGATE_ROOT_COLOR {
    - UserId id
    - Email email
    - UserRole role
    - UserStatus status
    - ActivationToken? activationToken
    - DateTime? activationSentAt
    + AssignRole(role)
    + UpdateRole(newRole)
    + Deactivate()
    + Activate()
}

class UserId <<Value Object>> VALUE_OBJECT_COLOR {
    - Guid value
    + UserId(value)
}

class Email <<Value Object>> VALUE_OBJECT_COLOR {
    - string value
    + Email(value)
}

class UserRole <<Value Object>> VALUE_OBJECT_COLOR {
    - string value
    + UserRole(value)
}

class UserStatus <<Value Object>> VALUE_OBJECT_COLOR {
    - string value
    + UserStatus(value)
}

class ActivationToken <<Value Object>> VALUE_OBJECT_COLOR {
    - string value
    + ActivationToken(value)
}

User "1" *-- "1" UserId : id
User "1" *-- "1" Email : email
User "1" *-- "1" UserRole : role
User "1" *-- "1" UserStatus : status
User "1" *-- "0..1" ActivationToken : activationToken

note right of User
  Administrator operations:
  - Create user + assign role
  - Send activation email
  - Update user roles
  - Deactivate users
end note

@enduml
